--- a/SecretKit.xcodeproj/xcshareddata/xcschemes/SecretKitTouchTest.xcscheme
+++ b/SecretKit.xcodeproj/xcshareddata/xcschemes/SecretKitTouchTest.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0800"
+   LastUpgradeVersion = "0900"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B412E6C1C7294BD0073441D"
-               BuildableName = "SecretKit.framework"
-               BlueprintName = "SecretKitTouch"
+               BlueprintIdentifier = "3B279E481C739D0D00DB0F5F"
+               BuildableName = "SecretKitTouchTest.app"
+               BlueprintName = "SecretKitTouchTest"
                ReferencedContainer = "container:SecretKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,9 +26,19 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "3B279E481C739D0D00DB0F5F"
+            BuildableName = "SecretKitTouchTest.app"
+            BlueprintName = "SecretKitTouchTest"
+            ReferencedContainer = "container:SecretKit.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -36,21 +46,23 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B412E6C1C7294BD0073441D"
-            BuildableName = "SecretKit.framework"
-            BlueprintName = "SecretKitTouch"
+            BlueprintIdentifier = "3B279E481C739D0D00DB0F5F"
+            BuildableName = "SecretKitTouchTest.app"
+            BlueprintName = "SecretKitTouchTest"
             ReferencedContainer = "container:SecretKit.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -60,15 +72,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B412E6C1C7294BD0073441D"
-            BuildableName = "SecretKit.framework"
-            BlueprintName = "SecretKitTouch"
+            BlueprintIdentifier = "3B279E481C739D0D00DB0F5F"
+            BuildableName = "SecretKitTouchTest.app"
+            BlueprintName = "SecretKitTouchTest"
             ReferencedContainer = "container:SecretKit.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
